# gulp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  turbo.json
services/api/: CLAUDE.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/app/: deps.py  export_openapi.py  main.py
services/api/tests/: conftest.py  test_auth.py  test_auth_api.py  test_auth_isolation.py  test_block_chat.py  test_capture.py  test_capture_enqueue.py  test_cards_api.py  test_catalog.py  test_cors.py  test_delete_snapshot.py  test_export.py  test_feeds_api.py  test_figures_api.py  test_genre_patch.py  test_gulp_compose.py  test_gulp_review.py  test_gulp_router.py  test_gulp_summary.py  test_inbox.py  test_library.py  test_llm_settings.py  test_ownership_audit.py  test_pack_chat.py  test_pack_mutations.py  test_pack_router.py  test_pack_service.py  test_processing.py  test_routers.py  test_schemas.py  test_security.py  test_sessions.py  test_snapshot_tags.py  test_today.py  test_today_gulp_counts.py
services/shared/: pyproject.toml
services/shared/gulp_shared/: __init__.py  logging.py  media.py  settings.py  urls.py
services/shared/tests/: conftest.py  test_card_model.py  test_card_scheduling_columns.py  test_cards_contract.py  test_cards_status.py  test_concept_models.py  test_db.py  test_feed_entry_model.py  test_feeds_domain.py  test_gulp_session_model.py  test_llm_anthropic.py  test_llm_catalog.py  test_llm_contract.py  test_llm_crypto.py  test_llm_loop.py  test_llm_openai_compat.py  test_llm_resolve.py  test_mastery.py  test_models.py  test_pack_block_message.py  test_pack_message.py  test_pack_models.py  test_review_event_model.py  test_scheduling.py  test_session_compose.py  test_settings_dsn.py  test_source_figure.py  test_status_domain.py  test_urls.py  test_user_llm_credential.py  test_user_model.py
services/worker/: CLAUDE.md  pyproject.toml
services/worker/tests/: test_adapter_note.py  test_adapter_webpage.py  (+30 more)
(+417 files in other folders)
