[project]
name = "gulp-api"
version = "0.0.0"
description = "Gulp HTTP API (FastAPI)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "gulp-shared",
]

[tool.uv.sources]
gulp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
