[project]
name = "gulp-api"
version = "0.0.0"
description = "Gulp HTTP API (FastAPI)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "arq>=0.26",
    "argon2-cffi>=23",
    "pydantic[email]>=2",
    "gulp-shared",
    "python-multipart>=0.0.9",
    "httpx>=0.28",
    "redis>=5",
]

[tool.uv.sources]
gulp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
