[project]
name = "gulp-shared"
version = "0.0.0"
description = "Shared server-side layer: ORM models, db, settings, domain."
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gulp_shared"]
