[project]
name = "gulp-worker"
version = "0.0.0"
description = "Gulp async processing engine — the AI pipeline + background jobs."
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26",
    "httpx>=0.28",
    "anthropic>=0.40",
    "gulp-shared",
]

[tool.uv.sources]
gulp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
